--- a/mp08/p3/index.html
+++ b/mp08/p3/index.html
@@ -87,6 +87,7 @@ public class MainActivity extends AppCompatActivity {
        Log.e(TAG,&#34;onCreate&#34;);
 
        textView = findViewById(R.id.textView);
+
        findViewById(R.id.dialog_button).setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
@@ -100,6 +101,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onStart() {
        super.onStart();
+
        Log.e(TAG,&#34;onStart&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onStart&#34;);
@@ -108,6 +110,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onResume() {
        super.onResume();
+
        Log.e(TAG,&#34;onResume&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onResume&#34;);
@@ -116,6 +119,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onPause() {
        super.onPause();
+
        Log.e(TAG,&#34;onPause&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onPause&#34;);
@@ -124,6 +128,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onStop() {
        super.onStop();
+
        Log.e(TAG,&#34;onStop&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onStop&#34;);
@@ -132,6 +137,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onRestart() {
        super.onRestart();
+
        Log.e(TAG,&#34;onRestart&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onRestart&#34;);
@@ -140,6 +146,7 @@ public class MainActivity extends AppCompatActivity {
    @Override
    protected void onDestroy() {
        super.onDestroy();
+
        Log.e(TAG,&#34;onDestroy&#34;);
 
        textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onDestroy&#34;);
@@ -240,6 +247,7 @@ public class MainActivity extends AppCompatActivity {
 <pre><code>@Override
 public void onSaveInstanceState(Bundle outState) {
    super.onSaveInstanceState(outState);
+
    Log.e(TAG,&#34;onSaveInstanceState&#34;);
 
    textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onSaveInstanceState&#34;);
@@ -249,6 +257,7 @@ public void onSaveInstanceState(Bundle outState) {
 @Override
 protected void onRestoreInstanceState(Bundle savedInstanceState) {
    super.onRestoreInstanceState(savedInstanceState);
+
    Log.e(TAG,&#34;onRestoreInstanceState&#34;);
 
    textView.setText(savedInstanceState.getString(&#34;REGISTRO&#34;));
@@ -280,6 +289,8 @@ public void onBackPressed() {
 </ol>
 <pre><code>@Override
 protected void onDestroy() {
+   super.onDestroy();
+
    Log.e(TAG,&#34;onDestroy&#34;);
 
    textView.setText(textView.getText() + &#34;\n&#34; + LocalDateTime.now() + &#34;: onDestroy&#34;);
@@ -288,10 +299,7 @@ protected void onDestroy() {
            .edit()
            .putString(&#34;REGISTRO&#34;, textView.getText().toString())
            .apply();
-
-   super.onDestroy();
-}
-</code></pre>
+}</code></pre>
 <ol type="1" start="2">
 <li>Modifica <code>onCreate()</code> para que restaure el TextView con el estado guardado en las <code>SharedPreferences</code>:<br></li>
 </ol>
@@ -299,7 +307,6 @@ protected void onDestroy() {
 protected void onCreate(Bundle savedInstanceState) {
    super.onCreate(savedInstanceState);
    setContentView(R.layout.activity_main);
-
 
    Log.e(TAG,&#34;onCreate&#34;);
 
