--- a/mp08/p6/index.html
+++ b/mp08/p6/index.html
@@ -33,6 +33,7 @@
 <p>Realizaremos una pequeña aplicación que sirva para llevar la puntuación de un partido de basket.</p>
 <p class="image-container"><img style="width: 566.00px" src="img\9826e5b627fd635c.gif"></p>
 <p>Código del proyecto: <a href="https://github.com/gerardfp/P6" target="_blank">https://github.com/gerardfp/P6</a></p>
+<p>Esta aplicación está basada en: <a href="https://medium.com/androiddevelopers/viewmodels-a-simple-example-ed5ac416317e" target="_blank">https://medium.com/androiddevelopers/viewmodels-a-simple-example-ed5ac416317e</a></p>
 
 
       </google-codelab-step>
